added letter boxed, refactored artist9000

--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
   <body>
     <a href="agentroulette/index.html">agent roulette</a>
     <a href="draggable/index.html">draggable</a>
+    <a href="artist9000/public/index.html">artist9000</a>
+    <a href="letter_boxed/index.html">letter boxed</a>    
   </body>
 </html>
