--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>lkross06</title>
   </head>
   <body>
-    <p>yeah that works see you then</p>
+    <a href="agentroulette/index.html">agent roulette</a>
+    <a href="draggable/index.html">draggable</a>
+    <a href="artist9000/public/index.html">artist9000</a>
+    <a href="letter_boxed/index.html">letter boxed</a>    
   </body>
+</html>
 </html>
